# routerman

./: Cargo.toml  README.md
examples/: hello.rs
src/: json.rs  lib.rs  method.rs  route.rs  router.rs
src/mime/: mod.rs
src/request/: ext.rs  extract.rs  mod.rs  params.rs
src/response/: hyper.rs  impls.rs  json.rs  mod.rs  parts.rs
